--- a/DGN/Views/Articles/Create.cshtml
+++ b/DGN/Views/Articles/Create.cshtml
@@ -21,17 +21,17 @@
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Body" class="control-label"></label>
-                            <textarea asp-for="Body" class="form-control"></textarea>
-                            <span asp-validation-for="Body" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
                             <label asp-for="CategoryId" class="control-label"></label>
                             <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                         </div>
                         <div class="form-group">
                             <label>Upload Article Image</label>
                             <input type="file" name="ImageFile" id="ImageFile" class="form-control-file" accept="image/x-png,image/jpg,image/jpeg">
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Body" class="control-label"></label>
+                            <textarea rows="20" asp-for="Body" class="form-control"></textarea>
+                            <span asp-validation-for="Body" class="text-danger"></span>
                         </div>
                         @if (ViewBag.Error != null)
                         {
