--- a/DGN/Views/Articles/Edit.cshtml
+++ b/DGN/Views/Articles/Edit.cshtml
@@ -23,14 +23,18 @@
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Body" class="control-label"></label>
-                            <textarea asp-for="Body" class="form-control"></textarea>
-                            <span asp-validation-for="Body" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
                             <label asp-for="CategoryId" class="control-label"></label>
                             <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                             <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>Upload Article Image</label>
+                            <input type="file" name="ImageFile" id="ImageFile" class="form-control-file" accept="image/x-png,image/jpg,image/jpeg">
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Body" class="control-label"></label>
+                            <textarea rows="20" asp-for="Body" class="form-control"></textarea>
+                            <span asp-validation-for="Body" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="CreationTimestamp" class="control-label"></label>
@@ -41,10 +45,6 @@
                             <label asp-for="LastUpdatedTimestamp" class="control-label"></label>
                             <input asp-for="LastUpdatedTimestamp" class="form-control" readonly />
                             <span asp-validation-for="LastUpdatedTimestamp" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>Upload Article Image</label>
-                            <input type="file" name="ImageFile" id="ImageFile" class="form-control-file" accept="image/x-png,image/jpg,image/jpeg">
                         </div>
                         @if (ViewBag.Error != null)
                         {
