--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <header id="header" class="fixed-top">
         <div class="container">
             <nav class=" navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand-left mr-auto d-sm-block d-xs-block d-lg-none" href="#home">
+                <a class="navbar-brand-left mr-auto d-sm-block d-xs-block d-lg-none" asp-controller="Articles" asp-action="Index">
                     <img src="~/images/logo.png" />
                 </a>
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarToggler"
@@ -27,7 +27,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand d-none d-lg-block" style="margin: 0; float: none;" asp-controller="Articles" asp-action="Index">
-                    <img src="~/images/logo.png" />
+                    <img id="logo" hidden src="~/images/logo.png" />
+                    <canvas id="logoCanvas">Your browser does not support the HTML canvas tag.</canvas>
                 </a>
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav nav-menu mr-auto mt-2 mt-lg-0">
