--- a/DGN/Views/Branches/Details.cshtml
+++ b/DGN/Views/Branches/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model DGN.Models.Branch
+@using System.Security.Claims;
 
 @{
     ViewData["Title"] = "Details";
@@ -45,7 +46,13 @@
                     </dl>
                 </div>
                 <div>
-                    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        @if ((User.FindFirst(ClaimTypes.Role)?.Value).Equals(UserRole.Admin.ToString()))
+                        {
+                            <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> <div class="sameline"> |</div>
+                        }
+                    }
                     <a asp-action="Index">Back to List</a>
                 </div>
             </aside>
@@ -62,4 +69,9 @@
     </script>
     <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?branch=release&callback=GetBranchAddress' async defer></script>
     <script src="~/js/branches.js" asp-append-version="true"></script>
+}
+
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/branches.css">
 }
