--- a/DGN/Views/Articles/Index.cshtml
+++ b/DGN/Views/Articles/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <video controls>
+    <video muted autoplay controls>
         <source src="/videos/DGN-intro.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
