--- a/DGN/Views/Articles/Index.cshtml
+++ b/DGN/Views/Articles/Index.cshtml
@@ -17,41 +17,7 @@
 <section class="hot-articles">
     <div class="wrap">
         <h2>Hottest Articles</h2>
-        <article class="card">
-            <a href="#" class="thumb">
-                <img src="https://sm.ign.com/t/ign_il/screenshot/default/netflix-on-laptop-jxg5-xfvd640-km42_6vtn.320.jpg"
-                     alt="New on Netflix this June" class="thumb" />
-            </a>
-            <h3 class="caption">
-                <a href="#">New on Netflix this June</a>
-            </h3>
-        </article>
-
-        <article class="card">
-            <a href="#" class="thumb">
-                <img src="https://sm.ign.com/t/ign_il/news/o/official-e/official-e3-2021-awards-show-announced_5tp3.320.jpg"
-                     alt="Tashtiot for ever!" class="thumb" />
-            </a>
-            <h3 class="caption"><a href="#">Tashtiot for ever!</a></h3>
-        </article>
-
-        <article class="card">
-            <a href="#" class="thumb">
-                <img src="https://sm.ign.com/t/ign_il/video/w/watch-dogs/watch-dogs-legion-of-the-dead-22-minutes-of-alpha-gameplay-1_82ex.320.jpg"
-                     alt="22 gameplay minutes of Watch Dogs: Legion of the Dead" class="thumb" />
-            </a>
-            <h3 class="caption">
-                <a href="#">22 gameplay minutes of Watch Dogs: Legion of the Dead</a>
-            </h3>
-        </article>
-
-        <article class="card">
-            <a href="#" class="thumb">
-                <img src="https://sm.ign.com/t/ign_il/news/p/playstatio/playstation-planning-expansion-into-mobile-games-and-apps_ewhk.320.jpg"
-                     alt=">Sony has just announced new cooperation with IAF!" class="thumb" />
-            </a>
-            <h3 class="caption"><a href="#">Sony has just announced new cooperation with IAF!</a></h3>
-        </article>
+        <div class="hot-articles-list"></div>
     </div>
 </section>
 <section class="latest-articles">
@@ -90,6 +56,18 @@
                      alt={title} class="thumb" />
                 <h3 class="caption">{title}</h3>
             </a>
+        </article>
+    </script>
+
+    <script id="mostLikedArticlesTemplate" type="text/html">
+        <article class="card">
+            <a href="/Articles/Details/{id}" class="thumb">
+                <img src="{imageLocation}"
+                     alt="{title}" class="thumb" />
+            </a>
+            <h3 class="caption">
+                <a href="/Articles/Details/{id}">{title}</a>
+            </h3>
         </article>
     </script>
 }
