fixed twitter button to be alien

--- a/DGN/wwwroot/css/articleDetails.css
+++ b/DGN/wwwroot/css/articleDetails.css
@@ -48,6 +48,11 @@ like-button {
     padding: 5px 10px;
 }
 
+.twitter-share-button[style] {
+    vertical-align: text-bottom !important;
+}
+
+
 like-button.liked {
     color: #0571ed;
 }
