FIX: show email address as link in search as in index page.

--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -94,7 +94,7 @@
                 {branchName}
             </td>
             <td>
-                {email}
+                <a href={email}>{email}</a>
             </td>
             <td>
                 <pre>
