--- a/DGN/wwwroot/css/articleDetails.css
+++ b/DGN/wwwroot/css/articleDetails.css
@@ -16,7 +16,7 @@
 
 .article-image {
     height: 500px;
-    border-radius: 100px 100px 100px 0;
+    border-radius: 100px 100px 0 0;
     overflow: hidden;
 }
 
@@ -26,7 +26,7 @@
 
 
 .article-cover {
-    border-radius: 0 100px 100px 100px;
+    border-radius: 0 0 100px 100px;
 }
 
 .article-title {
