--- a/DGN/Views/Users/EditAsAdmin.cshtml
+++ b/DGN/Views/Users/EditAsAdmin.cshtml
@@ -38,7 +38,15 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Role" class="control-label"></label>
-                            <select asp-for="Role" class="form-control" asp-items="ViewBag.Roles"></select>
+                            @if (Model.Role == UserRole.Admin)
+                            {
+                                
+                                <input asp-for="Role" class="form-control" value="@Model.Role" readonly/>
+                            }
+                            else
+                            {
+                                <select asp-for="Role" class="form-control" asp-items="ViewBag.Roles"></select>
+                            }
                             <span asp-validation-for="Role" class="text-danger"></span>
                         </div>
                         <div class="form-group">
