--- a/DGN/Views/Users/EditAsAdmin.cshtml
+++ b/DGN/Views/Users/EditAsAdmin.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DGN.Models.User
-
+@using System.Security.Claims;
 @{
     ViewData["Title"] = "Edit User";
 }
@@ -38,10 +38,10 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Role" class="control-label"></label>
-                            @if (Model.Role == UserRole.Admin)
+                            @if (Model.Role == UserRole.Admin && !(User.FindFirst(ClaimTypes.NameIdentifier)?.Value).Equals(Model.Id.ToString()))
                             {
-                                
-                                <input asp-for="Role" class="form-control" value="@Model.Role" readonly/>
+
+                                <input asp-for="Role" class="form-control" value="@Model.Role" readonly />
                             }
                             else
                             {
