--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -22,8 +22,16 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Username" class="control-label"></label>
-                            <input asp-for="Username" class="form-control" />
-                            <span asp-validation-for="Username" class="text-danger"></span>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <input asp-for="Username" class="form-control" />
+                                    <span asp-validation-for="Username" class="text-danger"></span>
+                                </div>
+                                <div class="col-md-6">
+                                    <button type="button" class="btn btn-primary" id="GenerateUsernameButton">Generate Username</button>
+                                </div>
+                            </div>
+                            <span id="generateUsernameError"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Firstname" class="control-label"></label>
@@ -77,9 +85,7 @@
     </section>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="~/js/register.js"></script>
-
 @section Scripts {
+    <script src="~/js/register.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
