--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Users" asp-action="Register">Hello Guest!</a>
+                                <a class="nav-link" asp-controller="Users" asp-action="Login">Hello Guest!</a>
                             </li>
                         }
                         <li class="nav-item">
