--- a/DGN/Views/Users/Index.cshtml
+++ b/DGN/Views/Users/Index.cshtml
@@ -100,7 +100,7 @@
                 {role}
             </td>
             <td>
-                <a href="Users/Edit/{id}">Edit</a> |
+                <a href="Users/EditAsAdmin/{id}">Edit</a> |
                 <a href="Users/Profile/{id}">Profile</a> |
                 <a href="Users/Delete/{id}">Delete</a>
             </td>
