FIX: branches search

--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -14,13 +14,13 @@
 
     <br />
     <h2>Branches list</h2>
-    <form asp-action="Search" style="padding-bottom: 1%">
+    <form asp-action="Search" style="padding-bottom: 1%" id="searchForm">
         <div class="row">
             <div class="col">
-                <input name="query" id="query" autocomplete="off" class="form-control" placeholder="Search" />
+                <input name="query" id="query" autocomplete="off" class="form-control" placeholder="Search"/>
             </div>
             <div class="col">
-                <input type="submit" class="btn btn-primary" />
+                <input type="submit" class="btn btn-primary" value="Search"/>
             </div>
         </div>
     </form>
