FIX: add id to search form

--- a/DGN/Views/Users/Index.cshtml
+++ b/DGN/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <h2 class="text-center">Users</h2><br />
 
-    <form asp-action="Search" style="padding-bottom: 1%">
+    <form asp-action="Search" style="padding-bottom: 1%" id="searchForm">
         <div class="row">
             <div class="col">
                 <input name="query" id="query" autocomplete="off" class="form-control" placeholder="Search" />
