Fixed some error message issues

--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -26,12 +26,12 @@
                         <div class="form-group">
                             <label class="control-label">Confirm New Password</label>
                             <input type="password" id="confirmNewPassword" name="confirmNewPassword" class="form-control" />
-                            <span id='message'></span>
                         </div>
                         @if (ViewBag.Error != null)
                         {
                             <div class="text-danger">@ViewBag.Error</div>
                         }
+                        <span id='message' class="text-danger"></span>
                         <div class="form-group">
                             <input type="submit" id="submit" disabled value="Change Password" class="btn btn-primary" />
                         </div>
