--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -45,7 +45,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Birthday" class="control-label"></label>
-                            <input asp-for="Birthday" class="form-control" />
+                            <input type="date" max="@DateTime.Now.Date.AddYears(-9)" asp-for="Birthday">
                             <span asp-validation-for="Birthday" class="text-danger"></span>
                         </div>
                         <div class="form-group">
