--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -11,29 +11,30 @@
                 <div class="inner"> 
                     <div class="formTitle">
                         <h2>Change Password</h2>
+                        <p class="text-danger">* Required</p>
                     </div>
                     <hr class="sep">
-                    <form id="changePasswordForm" asp-action="ChangePassword">
+                    <form id="changePasswordForm" asp-action="ChangePassword" onsubmit="return isValidForm()">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
-                            <label class="control-label">Current Password</label>
+                            <label class="control-label">Current Password</label><span class="text-danger">*</span>
                             <input type="password" id="currPassword" name="currentPassword" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label class="control-label">New Password</label>
+                            <label class="control-label">New Password</label><span class="text-danger">*</span>
                             <input type="password" id="newPassword" name="newPassword" class="form-control" />
                         </div>
                         <div class="form-group">
-                            <label class="control-label">Confirm New Password</label>
+                            <label class="control-label">Confirm New Password</label><span class="text-danger">*</span>
                             <input type="password" id="confirmNewPassword" name="confirmNewPassword" class="form-control" />
                         </div>
                         @if (ViewBag.Error != null)
                         {
-                            <div class="text-danger">@ViewBag.Error</div>
+                            <div id="currPasswordError" class="text-danger">@ViewBag.Error</div>
                         }
-                        <span id='message' class="text-danger"></span>
+                        <span id="message" class="text-danger"></span>
                         <div class="form-group">
-                            <input type="submit" id="submit" disabled value="Change Password" class="btn btn-primary" />
+                            <input type="submit" id="submit" value="Change Password" class="btn btn-primary" />
                         </div>
                     </form>
                 </div>
@@ -42,14 +43,7 @@
     </section>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="~/js/changePassword.js"></script>
-
 @section Scripts {
+    <script src="~/js/changePassword.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
-@section Styles {
-    <link rel="stylesheet" href="~/css/user.css" />
-}
-
