--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -70,7 +70,7 @@
                         </div>
                         @if (ViewBag.Error != null)
                         {
-                            <div class="text-danger">@ViewBag.Error</div>
+                            <div class="text-danger" id="errorMessage">@ViewBag.Error</div>
                         }
                         <div class="form-group">
                             <input id="submit" type="submit" value="Register" class="btn btn-primary" />
