Adjusted canvas size

--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand d-none d-lg-block" style="margin: 0; float: none;" asp-controller="Articles" asp-action="Index">
-                    <canvas id="logoCanvas">Your browser does not support the HTML canvas tag.</canvas>
+                    <canvas id="logoCanvas" width="125" height="45">Your browser does not support the HTML canvas tag.</canvas>
                 </a>
                 <div class="collapse navbar-collapse" id="navbarToggler">
                     <ul class="navbar-nav nav-menu mr-auto mt-2 mt-lg-0">
