FIX: on search - click on email address redirect to the email. now its tring to send mail instead.

--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -94,7 +94,7 @@
                 {branchName}
             </td>
             <td>
-                <a href={email}>{email}</a>
+                <a href='mailto: {email}'>{email}</a>
             </td>
             <td>
                 <pre>
