FIX: link in email in search user.

--- a/DGN/Views/Users/Index.cshtml
+++ b/DGN/Views/Users/Index.cshtml
@@ -85,7 +85,7 @@
     <script type="text/html" id="hidden-template">
         <tr>
             <td>
-                <a href="{email}">
+                <a href="mailto: {email}">
                     {email}
                 </a>
             </td>
