--- a/DGN/Views/Users/EditAsAdmin.cshtml
+++ b/DGN/Views/Users/EditAsAdmin.cshtml
@@ -33,7 +33,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Birthday" class="control-label"></label>
-                            <input asp-for="Birthday" class="form-control" />
+                            <input asp-for="Birthday" class="form-control" max="@DateTime.Now.Date.AddYears(-9).ToString("yyyy-MM-dd")"/>
                             <span asp-validation-for="Birthday" class="text-danger"></span>
                         </div>
                         <div class="form-group">
