Disabled edit email in profile

--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -125,8 +125,8 @@
                                 <h6 class="mb-0">@Html.DisplayNameFor(model => model.Email)</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                <input asp-for="Email" class="form-control">
-                                <span asp-validation-for="Email" class="text-danger"></span>
+                                <input asp-for="Email" class="form-control" readonly>
+                                <span class="text-danger"></span>
                             </div>
                         </div>
                         <div class="row mb-3">
