--- a/DGN/Views/Categories/Create.cshtml
+++ b/DGN/Views/Categories/Create.cshtml
@@ -18,6 +18,10 @@
                     <input asp-for="CategoryName" class="form-control" />
                     <span asp-validation-for="CategoryName" class="text-danger"></span>
                 </div>
+                @if (ViewBag.Error != null)
+                {
+                    <div class="text-danger">@ViewBag.Error</div>
+                }
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
